# HAPACK

./: .gitignore  Dockerfile  Doxyfile  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in  ltmain.sh  shippable.yml
DELPHI_LIB/: Makefile.am  Makefile.in  delphi.txt  delphi_lib.dsp
DELPHI_LIB/source/: Makefile.alpha  Makefile.myprog  Makefile.old2  itit4j.f  mem4.f  mkeps4f.f  non.f  phintp4.f  qdiff4s.f  qdiffpar4.h  relfac4b.f  scaler4.f  setbc4.f  setcrg4.f  setin4.f  setout4.f
GEOBALL/: GEOBALL.dsp  GeoBall.c  GeoBallLib.dsp  Makefile.am  Makefile.in  adjust.f  alf_gmp.c  alfcx.f  compute_vol.f  defines.h  delcx.f  geoball.h  gmp.h  gmpvar.h  prepare_deriv.f  sos_minor_gmp.c  sos_minor_gmp.h  spacefill_vol.f
GLEAP/: AUTHORS  CMakeLists.txt  GNUmakefile  Makefile  NEWS  install.py  makelink.py
GLEAP/freelib/: Makefile
GLEAP/leapdoc/: leap_pg.tex  leap_ug.tex
GLEAP/leapsrc/: Makefile  gtkarea.cpp  gtkarea.hpp  gtkmain.cpp  handler.cpp  handler.hpp  leapsrc.pro  loadlib.cpp  loadlib.hpp  plugins.cpp  strbuff.cpp  strbuff.hpp  strmain.cpp
GLEAP/mortsrc/: CMakeLists.txt  format.hpp  object.hpp  sff.h
GLEAP/plugins/: Makefile  add.cpp  add.hpp  addions.cpp  addions.hpp  addmap.cpp  addmap.hpp  bond.cpp  bond.hpp  center.cpp  center.hpp  charge.cpp  charge.hpp  copy.cpp  copy.hpp  create.cpp  create.hpp  delete.cpp  delete.hpp  depend  desc.cpp  desc.hpp  energy.cpp  energy.hpp  geom.cpp  help.cpp  help.hpp  impose.cpp  impose.hpp  list.cpp  list.hpp  loadcrd.cpp  loadcrd.hpp  loadfrc.cpp  loadfrc.hpp  loadmol2.cpp  loadmol2.hpp  loadoff.cpp  loadoff.hpp  loadpdb.cpp  (+32 more)
HALIB/halib/: Makefile.am  Makefile.in
HARLEM/: Doxyfile  Makefile.am  Makefile.in  harlem_nogui_mpi  harlempy.pyproj  objs_list.in
HARLEM/harlempy/: __init__.py  __main__.py  halib.py  hapygui.py  hapygui_init.py  harlempy.pyproj  molset.py  start_harlem.py  test_wx.py
HARLEM/linux/: harlem  harlem_conda  harlem_conda_2  harlem_ubuntu_igor.sh
HARLEM/molset/: __init__.py
HARLEM/scripts/: hapygui.py  hapygui_init.py  harlem_profile.py
HARLEM/sources/: FCMangle.h  abstree.cpp  abstree.h  apbsmod.cpp  apbsmod.h  atom_mapping.cpp  atom_mapping.h  axx_fit.f  builtin.h  canvas3d.cpp  canvas3d.h  cg_sngl.h  command.cpp  command.h  ctrl_wx.h  dalton_utils.f  delphutil.f  dialogs_wx_1.cpp  dialogs_wx_1.h  dialogs_wx_2.cpp  dialogs_wx_2.h  edit_mut_map_dlg_wx.cpp  edit_mut_map_dlg_wx.h  electrostmod.cpp  electrostmod.h  elmod.cpp  elmod.h  etablep.h  etcoupl.cpp  etcoupl.h  f2c.h  fmat.h  fminbr.cpp  font.h  g94_globals.h  g94_protos.h  gaufile.cpp  gaufile.h  gextr.f  gmath.f  (+200 more)
HARLEM/unix_files/: harlem_bcl  harlem_submit  harlem_ubuntu.sh  harlem_ubuntu_igor.sh
HARLEMLL/: Makefile.am  Makefile.in  __init__.py
HARLEM_NOGUI/: Makefile.am  Makefile.in
JUMNA_LIB/: Makefile.am  Makefile.in  Readme.txt  StdAfx.cpp  StdAfx.h  jumna_lib.dsp  jumna_lib.plg
JUMNA_LIB/doc/: jumna_notes.txt
JUMNA_LIB/sources/: Makefile.old.2  ampar91.f  ampar94.f  ang.f  assemb.f  axeout.f  backbo.f  build.f  cataxe.f  close.f  combi.f  cosdir.f  deltor.f  delval.f  dis.f  disth.f  ecomp.f  ecomp91.f  ecomp94.f  enecyl.f  energ91.f  energ94.f  energy.f  equim.f  equiv.f  fitsug.f  fixadd.c  flex.f  grads.f  gradt.f  helix.f  helloc.f  joie.f  jumcall.f  jumna_data.inc  kapa.f  kline.f  ligaxe.f  ligput.f  liner.f  (+25 more)
MORT_LIB/: CMakeLists.txt  Makefile  ambfmt.hpp  atmask.hpp  capbox.hpp  common.hpp  enefrc.hpp  guilib.hpp  makedepend  makeobjlist  mort.cfg  mortgl.hpp  objfun.hpp  objlist  pdbent.hpp  smarts.hpp  tripos.hpp
MORT_LIB/ambfmt/: Makefile  ambfmt.pro  ambfrc-amoeba.cpp  depend  energy.hpp  exclude.cpp  exclude.hpp  extent.cpp  les.cpp  les.hpp  parm.hpp  parmset.cpp  parmset.hpp  prmtop.cpp
MORT_LIB/atmask/: Makefile  atom.cpp  atom.hpp  condition.cpp  condition.hpp  depend  logic.cpp  logic.hpp  mask.cpp  mask.hpp
MORT_LIB/capbox/: Makefile  addions.cpp  octree.cpp  octree.hpp  region.hpp  shaper.hpp  solute.hpp  solvate.cpp  solvate.hpp  solvent.hpp
MORT_LIB/common/: Makefile  depend  fortran.hpp  funstack.cpp  geometry.cpp  geometry.hpp  hashcode.cpp  hashcode.hpp  hashcode.py  hashgen.py  numvec.hpp  pertab.cpp  pertab.hpp
MORT_LIB/enefrc/: Makefile  depend  nonbond-egb.cpp  nonbond-pbc.cpp  nonbond-pbc.hpp  nonbond.hpp
MORT_LIB/format/: Makefile  depend  frc.hpp  mdb.cpp  mdb.hpp
MORT_LIB/guilib/: command.hpp  console.hpp  control.hpp  depend  drawing.cpp  drawing.hpp  glutils.hpp  grammar.hpp  graphic.cpp  graphic.hpp  guilib.pro  leaplog.cpp  leaplog.hpp  mainwin.hpp  mouse.cpp  mouse.hpp  ortho.hpp  ribbon.hpp  txtbuff.cpp  txtbuff.hpp
MORT_LIB/mortgl/: drawing.cpp  drawing.hpp  fulfill.hpp  glstyle.cpp  graphic.hpp  mortgl.pro  mouse.cpp  mouse.hpp  ortho.cpp  ortho.hpp
MORT_LIB/object/: Makefile  atmv.hpp  atom.hpp  bond.hpp  comp.cpp  data.cpp  data.hpp  dihe.cpp  mfwd.hpp  mole.hpp  rang.hpp  rela.cpp  rela.hpp  resd.cpp
MORT_LIB/objfun/: atomfun.cpp  atomfun.hpp  bondfun.cpp  bondfun.hpp  depend  fixbond.cpp  geomfun.cpp  geomfun.hpp  merge.cpp  parmfun.cpp
MORT_LIB/pdbent/: Makefile  atom.cpp  atom.hpp  bond.cpp  mdlize.cpp  namemap.cpp  namemap.hpp  pdbent.cpp  resd.hpp
MORT_LIB/pymort/: CMakeLists.txt  hashcode.py  pyformat.cpp
MORT_LIB/python/: 1crn.mol  CMakeLists.txt  addion.py  glu.mol2  hpv.mol2  pycommon.cpp  pymort.py  show.py  solvate.py
MORT_LIB/smarts/: Makefile  depend  reader.cpp  reader.hpp  ring.cpp  smarts.cpp  status.hpp  subst.cpp  tyrule.hpp
MORT_LIB/tripos/: Makefile  atom.cpp
MY_VFLIB/: Makefile.am  Makefile.in  my_vflib.dsp
MY_VFLIB/src/: allocpool.h  argedit.cpp  argedit.h  dict.h  error.cpp  error.h  gene.h  gene_mesh.h  makefile.linux  match.h  state.h  ull_state.cpp  ull_state.h  ull_sub_state.cpp  ull_sub_state.h  vf_mono_state.cpp  vf_mono_state.h  vf_state.cpp  vf_state.h  (+2 more)
PMEMD_LIB/: Makefile.am  Makefile.in  PMEMD9_Benchmarks.xls  README  config.h  config.h.hercle.mpi  config_cygwin_nopar.h  configure  makef90depends  pmemd_2.txt  pmemd_min.txt  pmemd_vars_arrays.txt
(+3528 files in other folders)
